--- a/src/components/LanguageToggle/LanguageToggle.scss
+++ b/src/components/LanguageToggle/LanguageToggle.scss
@@ -33,6 +33,7 @@
     transform: translateX(-50%);
     left: 50%;
     color: $color-black;
+    z-index: 100;
     @media #{$viewport-medium} {
       width: 120%;
     }
